<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_single_item_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/single_item_type" />

                <Button
                    android:id="@+id/button_single_item_type_async"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/single_item_type_async" />

                <Button
                    android:id="@+id/button_multiple_item_types"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/multiple_item_types" />

                <Button
                    android:id="@+id/button_diff_util_sorting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diff_util_sorting" />

                <Button
                    android:id="@+id/button_diff_util_add_remove"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diff_util_add_remove" />

                <Button
                    android:id="@+id/button_diff_util_add_remove_random"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diff_util_add_remove_random" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>